# meridian

./: .gitignore  README.md  diarize.py  main.py  pyproject.toml  transcribe.py  transcription.py  youtube.py
ai/: .gitignore  README.md  api.py  diarize.py  main.py  merge.py  pyproject.toml  transcribe.py
ai/transcripts/: yt_HYRE6DER_zo?si=9W2ouxeNp4PwAFJF.combined.json  yt_HYRE6DER_zo?si=9W2ouxeNp4PwAFJF.diarization.json  yt_HYRE6DER_zo?si=9W2ouxeNp4PwAFJF.transcription.json  yt_gFe7n7a39RA.combined.json  yt_gFe7n7a39RA.diarization.json  yt_gFe7n7a39RA.transcription.json
ui/: .gitignore
ui/Meridian/Meridian/: ContentView.swift  MeridianApp.swift
ui/Meridian/Meridian.xcodeproj/: project.pbxproj
ui/Meridian/Meridian/Models/: CombinedTranscript.swift  Experience.swift
ui/Meridian/Meridian/Networking/: MeridianAPI.swift
ui/Meridian/Meridian/Persistence/: ExperienceStore.swift
ui/Meridian/Meridian/ViewModels/: MeridianViewModel.swift
ui/Meridian/MeridianTests/: MeridianTests.swift
ui/Meridian/MeridianUITests/: MeridianUITests.swift  MeridianUITestsLaunchTests.swift
