[project]
name = "meridian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "openai>=1.107.2",
    "pyannote-audio>=3.4.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    "yt-dlp>=2025.9.5",
]
